--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "task-7-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://thandolnjili.github.io/fictitiouscompany/",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.11",
+    "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
